NMS-16 code updated

--- a/mobileacademy/src/main/resources/webapp/partials/add-mobileacademy.html
+++ b/mobileacademy/src/main/resources/webapp/partials/add-mobileacademy.html
@@ -5,8 +5,8 @@
             <div class="form-group">
                 <div class="controls">
                     <button class="btn btn-primary" ng-click="sayHello()">
-                        {{msg('academy.btn.sayHello')}}</button>
-                    {{msg('academy.info.instructions')}}
+                        {{msg('mobileacademy.btn.sayHello')}}</button>
+                    {{msg('mobileacademy.info.instructions')}}
                 </div>
             </div>
 
@@ -15,8 +15,8 @@
                     class="table table-bordered table-condensed table-lightblue">
                     <thead>
                         <tr>
-                            <th>{{msg('academy.info.serviceResponse')}}</th>
-                            <th>{{msg('academy.info.serviceCount')}}</th>
+                            <th>{{msg('mobileacademy.info.serviceResponse')}}</th>
+                            <th>{{msg('mobileacademy.info.serviceCount')}}</th>
                         </tr>
                     </thead>
                     <tbody>
